# TOPICAL

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
scripts/: format_examples.py  sample_entities.py
src/prompts/: how_to_cite.txt  instructions.txt  system.txt  topic_page.txt
src/topical/: __init__.py  app.py  common.py  nlm.py  util.py
tests/: test_nlm.py  test_util.py
