[tool.poetry]
name = "topical"
version = "0.1.0"
description = "A tool for automatically generating topic pages for a broad range of biomedical entities and concepts."
authors = ["John Giorgi <johnmgiorgi@gmail.com>"]
readme = "README.md"
exclude = ["scripts/"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
streamlit = "^1.30.0"
guidance = "^0.1.10"
nltk = "^3.8.1"
biopython = "^1.81"
sentence-transformers = "^2.2.2"
adapter-transformers = "^3.2.1"
pydantic = "^2.4.2"
diskcache = "^5.6.3"
ujson = "^5.8.0"
cached-path = "^1.4.0"
lxml = "^4.9.3"
more-itertools = "^10.1.0"

[tool.poetry.group.dev.dependencies]
watchdog = "^3.0.0"
isort = "^5.12.0"
black = "^23.9.1"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
hypothesis = "^6.88.3"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.black]
# This configuration is adapted from: 
# - https://github.com/allenai/allennlp/blob/main/pyproject.toml
# - https://github.com/allenai/cached_path/blob/main/pyproject.toml
# - https://github.com/huggingface/transformers/blob/main/pyproject.toml
line-length = 119

include = '\.pyi?$'

exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
